--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -111,27 +111,60 @@
     <article>
         <h1 class="text-center">Explore Nossos Eventos</h1>
     </article>
-
+    <br><br><br>
   
     <!-- <hr>
         <section>
 
         </section>
     <hr> -->
-    <article>
+    <article class="container-fluid container_descricao">
         <hr>
-        <section>
-            
+        <section class="row align-items-center justify-content-evenly  py-4">
+            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
+                <h1 class="titulo_descricao">Estação Esportiva</h1>
+                <p id="texto4">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+              </p>
+              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
+
+              </div>
         </section>
         <hr>
-        <hr>
-        <section>
+        <section class="row align-items-center justify-content-evenly  py-4">
+            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
+                <h1 class="titulo_descricao">Estação Esportiva</h1>
+                <p id="texto4">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+              </p>
+              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
 
+              </div>
+        </section>
+        <hr>
+        <section class="row align-items-center justify-content-evenly  py-4">
+            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
+                <h1 class="titulo_descricao">Estação Esportiva</h1>
+                <p id="texto4">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+              </p>
+              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
+
+              </div>
         </section>
         <hr>
     </article>
 
-  
+   
 
 
 
