--- a/testes/tester-2.html
+++ b/testes/tester-2.html
@@ -23,10 +23,9 @@
         border: none;
         background-color: #F6CC3A ;
         text-align: center;
-        border-radius: 20px;
         }
-        div .card{
-            height: 50rem !important;
+        .card{
+            height: 100% !important;
         }
         .card-title{
             font-family:"Luckiest Guy", sans-serif;
@@ -82,18 +81,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 10px;
+            
+
         }
-        .img-wrapper img{
-            max-width: 100%; 
-            max-height: 100%; 
-            height: auto; 
-            width: auto;       
+        .img-wrapper{
+            object-fit: cover !important;
         }
         .card img {
+            height: 300px;
+            width: auto;
             max-height: 100%;
-            border-radius: 10px !important;
-
+            max-width: 100%;
         }
         @media (max-width: 767px) {
         .card .img-wrapper {
