--- a/telas_finais/saude.html
+++ b/telas_finais/saude.html
@@ -80,7 +80,20 @@
           </div>
       </nav>
   </header>
-  
+  <!-- imagens -->
+  <picture>
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja">
+ 
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul2">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela2">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja2">
+
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul3">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela3">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja3"> 
+  </picture> 
     <br>
     <br>
     <br>
@@ -201,7 +214,7 @@
                 </p>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-center">
-                  <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+                  <img src="../imagens_galeria/saude_e_bem_estar/clinicas esportivas.png" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
               </div>
           </div>
       </div>
@@ -225,7 +238,7 @@
             </p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-center">
-              <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+              <img src="../imagens_galeria/saude_e_bem_estar/Estação Fitness .jpeg" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
             </div>
         </div>
       </div>
