Adição de alteração de Navbar

--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="obterDados()">
+<body onload="checarStatusLogin()">
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
