--- a/telas_finais/tela_admin.html
+++ b/telas_finais/tela_admin.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
                 <div>
-                    <img src="image/Logo Passatempo.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+                    <img src="image/Logo Passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
