--- a/telas_finais/consulta_dados.html
+++ b/telas_finais/consulta_dados.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body>
+<body onload="obterDados()">
     <header>
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
@@ -112,27 +112,6 @@
                 </thead>
                 <tbody>
                 <!-- Linhas vazias (serão preenchidas dinamicamente ou manualmente) -->
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
                 <!-- Continue com mais linhas conforme necessário -->
                 </tbody>
             </table>
@@ -140,6 +119,9 @@
     </main>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/estatistica.js"></script>
+    <script src="../js/dados.js"></script>
 </body>
 </html>
