Adição de função sair() nos scripts

--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body onload="checarStatusLogin()">
+<body onload="obterDados()">
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
