css e fotnes na tela_servico.html
Adicionei o css da página pois estava conflitando com a de eventos, coloquei fontes, o botao e troquei a cor do botao de voltar para a cor da paleta, o botão de voltar esta sem destinatário.

--- a/telas_finais/tela_servico.html
+++ b/telas_finais/tela_servico.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos</title>
-    <link rel="stylesheet" href="css/eventos.css">
+    <link rel="stylesheet" href="css/tela_servico.css">
+    
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="styles/modal.css">
@@ -29,14 +30,14 @@
     left: 5%; 
     width: 50px;
     height: 50px;
-    background-color: black;
-    color: white;
+    background-color: rgb(62, 64, 150); ;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    font-size: 30px;
     cursor: pointer;
     text-decoration: none;
     transition: transform 0.2 ease-in-out;
@@ -146,8 +147,11 @@
         </div>
     </div>
     
+    <div>
+        <button onclick="window.location.href='contato.html'" id="botao_contato">contato</button>
+    </div>
     <footer class="container-fluid d-flex flex-column align-items-center justify-content-center">
-        <a href="tela_admin.html" class="back-button">
+        <a href="tela_destino" class="back-button">  
             <span>&#10140;</span>
         </a>
     </footer>
