--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -102,6 +102,7 @@
             <div class="row  justify-content-center">
                 <div class="col-12 text-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="black" class="bi bi-tools" viewBox="0 0 16 16">
+                        <title>Uma chave de fenda e uma chave combinada cruzadas formando um "x"</title>
                         <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
                     </svg>
                 </div>
@@ -144,7 +145,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img1" class="card-img round">                            
+                                <img id="img1" class="card-img round">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -156,7 +157,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="image/coloque_imagem.PNG" alt="" id="img2" class="card-img ">                            
+                                <img id="img2" class="card-img ">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -168,7 +169,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img3" class="card-img">                            
+                                <img  id="img3" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -180,7 +181,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt=""  id="img4" class="card-img">                            
+                                <img   id="img4" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -192,7 +193,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img5" class="card-img">                            
+                                <img  id="img5" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -204,7 +205,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt=""  id="img6" class="card-img">                            
+                                <img   id="img6" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -216,7 +217,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img7" class="card-img">                            
+                                <img  id="img7" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -228,7 +229,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img8" class="card-img">                            
+                                <img  id="img8" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -240,7 +241,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="" id="img9" class="card-img">                            
+                                <img id="img9" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
