--- a/telas_finais/consulta_dados.html
+++ b/telas_finais/consulta_dados.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
                 <div>
-                    <img src="image/Logo Passatempo.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+                    <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,10 +41,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="menu-2.html">Home</a>
+                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
@@ -53,7 +53,7 @@
                                 <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
