--- a/telas_finais/add_img.html
+++ b/telas_finais/add_img.html
@@ -40,10 +40,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="menu-2.html">Home</a>
+                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
@@ -52,7 +52,7 @@
                                 <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
@@ -83,7 +83,6 @@
             </div>
         </nav>
     </header>
-
 
     <div class="container-fluid d-flex flex-column align-items-center add_img justify-content-center">
         <img src="image/logo_passatempo_digital.png" alt="Logo Passatempo" id="logo2" class="mb-3 mt-5">
