--- a/telas_finais/navbar_adm.html
+++ b/telas_finais/navbar_adm.html
@@ -29,10 +29,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="menu-2.html">Home</a>
+                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
@@ -41,7 +41,7 @@
                                 <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
