--- a/telas_finais/tela_admin.html
+++ b/telas_finais/tela_admin.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
                 <div>
-                    <img src="image/Logo Passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+                    <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                                 <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
