--- a/telas_finais/add_img.html
+++ b/telas_finais/add_img.html
@@ -40,7 +40,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
+                                <a class="nav-link navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
