--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -145,7 +145,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img1" class="card-img round">                            
+                                <img id="imagem1" class="card-img round">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -157,7 +157,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img2" class="card-img ">                            
+                                <img id="imagem2" class="card-img ">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -169,7 +169,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img3" class="card-img">                            
+                                <img  id="imagem3" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -181,7 +181,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img   id="img4" class="card-img">                            
+                                <img   id="imagem4" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -193,7 +193,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img5" class="card-img">                            
+                                <img  id="imagem5" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -205,7 +205,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img   id="img6" class="card-img">                            
+                                <img   id="imagem6" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -217,7 +217,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img7" class="card-img">                            
+                                <img  id="imagem7" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -229,7 +229,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img8" class="card-img">                            
+                                <img  id="imagem8" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -241,7 +241,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img9" class="card-img">                            
+                                <img id="imagem" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
