link dos botoes

--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -146,7 +146,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptate autem ut velit nisi harum saepe mollitia amet, laborum eaque placeat cum excepturi veniam, beatae dolores vero commodi iste sunt.</p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer Oficinas</a>
+                        <a href="oficinas.html" class="btn btn-secondary botao_card w-100">Conhecer Oficinas</a>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptate autem ut velit nisi harum saepe mollitia amet, laborum eaque placeat cum excepturi veniam, beatae dolores vero commodi iste sunt.</p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer Eventos</a>
+                        <a href="eventos.html" class="btn btn-secondary botao_card w-100">Conhecer Eventos</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptate autem ut velit nisi harum saepe mollitia amet, laborum eaque placeat cum excepturi veniam, beatae dolores vero commodi iste sunt.</p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer  Saúde</a>
+                        <a href="saude.html" class="btn btn-secondary botao_card w-100">Conhecer  Saúde</a>
                     </div>
                 </div>
             </div>
