--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -38,50 +38,52 @@
     </script>
     <!--  fim vlibras  -->
 
-  <!-- navbar -->
-  <header>
-    <nav class="navbar navbar-expand-lg fixed">
-        <div class="container-fluid">
-            <div>
-                <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>  
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
-                        <li class="nav-item  navegacao_item">
-                            <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="contato.html">Contato</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="login.html">Admin</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
-  </header>
+    <!-- navbar -->
+    <header>
+      <nav class="navbar navbar-expand-lg fixed">
+          <div class="container-fluid">
+              <div>
+                  <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+              </div>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                  <div class="offcanvas-header">
+                      <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
+                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>  
+                  <div class="offcanvas-body">
+                      <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
+                          <li class="nav-item  navegacao_item">
+                              <a class="nav-link  navegacao_link" aria-current="page" href="home.html">Home</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link active" href="eventos.html">Eventos</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link" href="contato.html">Contato</a>
+                          </li>
+                          <li class="nav-item navegacao_item">
+                              <a class="nav-link navegacao_link" href="login.html">Admin</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </nav>
+    </header>
+
+ 
 
 
 
@@ -141,14 +143,14 @@
                   <br>
                   <section class="row align-items-center justify-content-evenly  py-4">
                       <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+                          <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
                       </div>
-                      <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                          <h1 class="titulo_descricao">Estação Esportiva</h1>
-                          <p id="texto4">
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="textto1">Estação Esportiva</h1>
+                          <p id="texto2" class="texto_descricao">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
                         </p>
-                        <a class="btn btn-primary botao_oficinas" href="contato.html">Saiba Mais > </a>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                         </div>
                   </section>
                   <div class="divisoria"></div>
@@ -156,12 +158,12 @@
                       <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
                       </div>
-                      <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                          <h1 class="titulo_descricao">Estação Esportiva</h1>
-                          <p id="texto4">
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto3">Estação Esportiva</h1>
+                          <p id="texto4" class="texto_descricao">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
                         </p>
-                        <a class="btn btn-primary botao_oficinas" href="contato.html">Saiba Mais > </a>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -169,12 +171,12 @@
                       <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem3">
                       </div>
-                      <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                          <h1 class="titulo_descricao">Estação Esportiva</h1>
-                          <p id="texto4">
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto5">Estação Esportiva</h1>
+                          <p id="texto6" class="texto_descricao">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
                         </p>
-                        <a class="btn btn-primary botao_oficinas" href="contato.html">Saiba Mais > </a>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
                 </article>
@@ -182,6 +184,7 @@
               <div class="tab-pane fade" id="pills-corporativo" role="tabpanel" aria-labelledby="pills-corporativo-tab">Conteúdo do Profile...</div>
           </div>
         </section>
+        <div class="divisoria"></div>
       </div>  
     </article>
     
