Coloquei as descrições das oficinas

--- a/telas_finais/saude.html
+++ b/telas_finais/saude.html
@@ -82,17 +82,17 @@
   </header>
   <!-- imagens -->
   <picture>
-    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul">
-    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela">
-    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja">
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="imagem0">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="imagem1">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="imagem2">
  
-    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul2">
-    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela2">
-    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja2">
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="imagem3">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="imagem4">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="imagem5">
 
-    <img src="image/purpurina_azul.png" alt="purpurina azul" id="purp_azul3">
-    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="purp_amarela3">
-    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="purp_laranja3"> 
+    <img src="image/purpurina_azul.png" alt="purpurina azul" id="imagem6">
+    <img src="image/purpurina_amarela.png" alt="purpurina amarela" id="imagem7">
+    <img src="image/purpurina_laranja.png" alt="purpurina laranja" id="imagem8"> 
   </picture> 
     <br>
     <br>
@@ -197,16 +197,16 @@
           <div class="row align-items-center justify-content-evenly row_descricao py-4">
               <div class="col-sm-12 col-md-12 col-lg-5 text-start col_texto_descricao ">
                 <h1 class="titulo_descricao">Clínica Esportiva</h1>
-                <p id="texto2">
+                <p id="texto0">
                   Nossas Clínicas Esportivas são projetadas para introduzir crianças ao
                   mundo dos esportes de maneira divertida, segura e educativa.
                 </p>
-                <p>
+                <p id="texto1">
                   Com foco no desenvolvimento físico, social e emocional, oferecemos uma ampla gama de
                   modalidades esportivas que estimulam o espírito de equipe, a disciplina, e o gosto pela
                   atividade física desde cedo.
                 </p>
-                <p>
+                <p id="texto2">
                   As atividades são conduzidas por profissionais qualificados e utilizam métodos lúdicos para
                   ensinar os fundamentos de diferentes esportes.
                   Futebol, Basquete, Vôlei, Ginástica, Circo, Capoeira, Handebol, Takkyu Volley, Esgrima,
@@ -214,7 +214,7 @@
                 </p>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-center">
-                  <img src="../imagens_galeria/saude_e_bem_estar/clinicas esportivas.png" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+                  <img src="../imagens_galeria/saude_e_bem_estar/clinicas esportivas.png" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem9">
               </div>
           </div>
       </div>
@@ -223,7 +223,7 @@
         <div class="row align-items-center justify-content-evenly row_descricao py-4">
             <div class="col-sm-12 col-md-12 col-lg-5 text-start col_texto_descricao ">
               <h1 class="titulo_descricao">Estação Esportiva</h1>
-              <p id="texto4">
+              <p id="texto3">
                 A Estação Fitness é um espaço completo para todas as idades, dedicado ao
                 exercício físico e ao bem-estar.
             </p>
@@ -233,12 +233,12 @@
                 programas de condicionamento físico que atendem às necessidades de iniciantes a atletas
                 avançados.
             </p>
-            <p id="texto4">
+            <p id="texto5">
                 Yoga, Pilates, Zumba, Funcional, Crossfit e muito mais.<br>
             </p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-center">
-              <img src="../imagens_galeria/saude_e_bem_estar/Estação Fitness .jpeg" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
+              <img src="../imagens_galeria/saude_e_bem_estar/Estação Fitness .jpeg" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem10">
             </div>
         </div>
       </div>
