--- a/telas_finais/tela_servico.html
+++ b/telas_finais/tela_servico.html
@@ -127,7 +127,7 @@
                 <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block " id="imagem0">
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Nome Do Serviço</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero corporis commodi doloremque nobis quos quis error in vitae odit eaque? Doloremque inventore ab reprehenderit earum adipisci, odio nulla natus mollitia!
@@ -138,13 +138,13 @@
                 <h4>Entre em contato com agente</h4>
                 <button onclick="window.location.href='contato.html'" id="botao_contato">contato</button>
             </div>
-            <div class="col-sm-10 col-md-5 ">
+            <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
                     <div class="col">
                         
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     
