--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -149,8 +149,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto2">Mohamed Yousef 1</h2>
-                            <p class="description" id="texto3">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto2">Batalha Nerf</h2>
+                            <p class="description" id="texto3">
+                                Promover a diversão, o exercício físico, o trabalho em equipe, e o desenvolvimento de habilidades estratégicas e motoras, utilizando as pistolas Nerf em jogos organizados e seguros. Cenário de campo de batalha, equipamentos e regras de segurança.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -161,8 +162,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto4">Mohamed Yousef 2</h2>
-                            <p class="description" id="texto5">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto4">Bolhas Gigantes</h2>
+                            <p class="description" id="texto5">
+                                Criar bolhas gigantes é uma atividade que encanta pessoas de todas as idades. magine o brilho nos olhos das crianças ao verem bolhas enormes pairando no ar, refletindo as cores do arco-íris. É um momento de diversão e admiração que ficará gravado na memória de todos os participantes. Deixe a imaginação fluir e embarque nessa jornada de encanto e magia com a nossa oficina de bolhas gigantes.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -173,8 +175,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto6">Mohamed Yousef 3</h2>
-                            <p class="description" id="texto7">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto6">Catavento</h2>
+                            <p class="description" id="texto7">
+                                Com materiais simples e muita criatividade, os participantes poderão construir seu próprio cata-vento e experimentar a sensação de ver a força do vento transformada em movimento.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -185,8 +188,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto8">Mohamed Yousef 4</h2>
-                            <p class="description" id="texto9">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto8">Culinária</h2>
+                            <p class="description" id="texto9">
+                                Com ingredientes coloridos e instruções simples, cada receita foi cuidadosamente planejada para estimular a criatividade e despertar o interesse dos pequenos pela culinária. Proporcionando momentos especiais em família e criando memórias afetuosas que serão lembradas com carinho no futuro.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -197,8 +201,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto10">Mohamed Yousef 5</h2>
-                            <p class="description" id="texto11">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto10">Pintura em Tela</h2>
+                            <p class="description" id="texto11">
+                                Aqui, os artistas podem explorar diferentes técnicas e estilos para dar vida às suas ideias e emoções. Cada item na nossa oficina é um convite para a expressão artística e a celebração da beleza que está presente em cada traço e cor. Junte-se a nós e deixe sua imaginação voar.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -209,8 +214,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto12">Mohamed Yousef 6</h2>
-                            <p class="description" id="texto13">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto12">Pulseira Macramê</h2>
+                            <p class="description" id="texto13">
+                                As crianças vão se encantar com a ideia de poder presentear um amigo com algo feito por elas mesmas, repleto de carinho e dedicação. Além de estimular a criatividade, essa atividade promove a amizade e fortalece os laços entre os pequenos.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -221,8 +227,10 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto14">Mohamed Yousef 7</h2>
-                            <p class="description" id="texto15">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto14">Robótica</h2>
+                            <p class="description" id="texto15">
+                                Essa atividade não apenas proporciona aprendizado prático em engenharia e tecnologia, mas também fomenta um ambiente de competição saudável e o orgulho de ver o fruto do esforço em equipe.
+</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -233,8 +241,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto16">Mohamed Yousef 8</h2>
-                            <p class="description" id="texto17">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto16">Slime</h2>
+                            <p class="description" id="texto17">
+                                Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
@@ -245,8 +254,9 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name" id="texto18">Mohamed Yousef 9</h2>
-                            <p class="description" id="texto19">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+                            <h2 class="name" id="texto18">Terrário</h2>
+                            <p class="description" id="texto19">
+                                Você e seus pequenos poderão se divertir juntos enquanto aprendem a cuidar de plantas e criam um ambiente único e especial. Nossa oficina de terrários é uma oportunidade perfeita para estimular a criatividade, promover a conexão com a natureza e fortalecer os laços familiares.</p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
